# fracpylib

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fracpylib/: __about__.py  __init__.py
src/fracpylib/fraction/: __init__.py  fracmath.py  fracmisc.py  fraction.py
src/fracpylib/fractionlib/: __init__.py  fracmath.py  fracmisc.py  fraction.py
src/fracpylib/misc/: percentage.py
tests/: __init__.py  test_fracpylib.py
