[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fracpylib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "robert19066", email = "andronic.robert12@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/robert19066/fracpylib#readme"
Issues = "https://github.com/robert19066/fracpylib/issues"
Source = "https://github.com/robert19066/fracpylib"

[tool.hatch.version]
path = "src/fracpylib/__about__.py"

[tool.hatch.environments.types]
dependencies = [
  "mypy>=1.0.0",
  "twine"
]
[tool.hatch.envs.types.scripts]
check = "python -m mypy --install-types --non-interactive {args:src/fracpylib tests}"

[tool.coverage.run]
source_pkgs = ["fracpylib", "tests"]
branch = true
parallel = true
omit = [
  "src/fracpylib/__about__.py",
]

[tool.coverage.paths]
fracpylib = ["src/fracpylib", "*/fracpylib/src/fracpylib"]
tests = ["tests", "*/fracpylib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
